src/theme-gcwu-fegc/sass/includes/_default-desktop-screen.scss
/*
 * Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW)
 * wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Licence-fra.txt
 */
@import "compass/css3/border-radius";
@import "compass/css3/box-shadow";
@import "compass/css3/appearance";
@import 'compass/css3/transform';

html {
	overflow-y: scroll;
}

body {
	padding: 0;
}

img {
	border: none;
}

h1 {
	color: #333;
	font-weight: 400;
	border-bottom: 1px solid #333;
	font-size: 1.8em;
	margin-bottom: 10px !important;
	margin-top: 0;
}

%gcwu-default-link {
	&, &.ui-link {
		&:link {
			color: #295376;
		}
		&:visited {
			color: #5a306b;
		}
	}
}

a {
	@extend %gcwu-default-link;
}

%gcwu-default-desktop-screen-hidden-img {
	img {
		position: absolute;
		@include clip-rect;
		height: 0 !important;
		width: 0 !important;
		overflow: hidden !important;
		margin: 0 !important;
	}
}

%gcwu-default-desktop-screen-inline-z1 {
	z-index: 1;
	display: inline;
}

#wb-sup {
	@extend %gcwu-default-desktop-screen-inline-z1;
	@extend %gcwu-default-desktop-screen-float-right-relative;
}

%overflow-hidden {
	overflow: hidden;
}

#wb-head {
	@extend %overflow-hidden;
}

#wb-head-in {
	@extend %overflow-hidden;
}

#wb-foot {
	@extend %overflow-hidden;
	@extend %text-decoration-underline-a-psuedos;
	#gcwu-wmms {
		display: none;
	}
}

#wb-foot-in {
	@extend %overflow-hidden;
}

#gcwu-bc {
	@extend %overflow-hidden;
}

#gcwu-gcft {
	@extend %overflow-hidden;
}

#gcwu-sft {
	@extend %overflow-hidden;
}

#gcwu-gcnb-in {
	@extend %overflow-hidden;
}

#gcwu-bc-in {
	@extend %overflow-hidden;
}

#gcwu-gcft-in {
	@extend %overflow-hidden;
}

#gcwu-sft-in {
	@extend %overflow-hidden;
}

#wb-core-in {
	overflow: visible !important;
	position: relative;
	padding-top: 5px;
	&:after {
		content: ".";
		display: block;
		height: 0;
		clear: both;
		visibility: hidden;
	}
}

#gcwu-bnr {
	@extend %overflow-hidden;
	position: relative;
	z-index: 501 !important;
}

#gcwu-bnr-in {
	@extend %overflow-hidden;
	min-height: 6.5em;
	position: relative;
}

#wb-main-in {
	padding-top: 1px;
	padding-bottom: 2.5em;
	a {
		@extend %gcwu-default-link;
	}
}

#wb-body-sec {
	#wb-main {
		@extend %gcwu-default-desktop-screen-float-right;
	}
	#gcwu-content {
		@extend %gcwu-default-desktop-screen-float-left;
	}
}

#wb-sec-in {
	margin: 7px 0 0 10px;
}

#wb-body {
	#gcwu-content {
		@extend %gcwu-default-desktop-screen-float-left;
		position: relative;
	}
	#wb-main {
		@extend %gcwu-default-desktop-screen-float-left;
	}
}

#gcwu-aside {
	@extend %gcwu-default-desktop-screen-float-right;
	margin-left: 10px;
	margin-right: 10px;
}

#gcwu-date-mod {
	position: absolute;
	bottom: 0;
	right: 10px;
}

%gcwu-default-desktop-screen-float-left {
	float: left;
}

%gcwu-default-desktop-screen-float-right {
	float: right;
}

#wb-body-sec-sup {
	#wb-main {
		@extend %gcwu-default-desktop-screen-float-left;
		@extend %gcwu-default-desktop-screen-float-right-relative;
	}
}

#wb-sec {
	@extend %gcwu-default-desktop-screen-float-left;
	@extend %gcwu-default-desktop-screen-inline-z1;
}

%gcwu-default-desktop-screen-float-right-relative {
	float: right;
	position: relative;
}

#gcwu-sig {
	@extend %gcwu-default-desktop-screen-hidden-img;
	width: 247px;
	@extend %gcwu-default-desktop-screen-float-left;
	margin: 8px 0;
}

#gcwu-sig-in {
	margin-left: 10px;
	height: 24px;
}

#gcwu-gcnb {
	height: 3.6em;
	min-height: 41px;
	a {
		border-left: 1px solid #fff;
		display: block;
		padding: 0 1em;
	}
	li {
		&:first-child {
			a {
				border-left: none;
			}
		}
	}
}

#gcwu-title {
	height: 123px;
	display: table-row;
	a {
		display: inline-block;
		margin-left: 10px;
		@include pseudo-focus {
			text-decoration: underline;
		}
	}
	&, a {
		color: #fff;
		font-size: 1.52em;
		font-family: Arial, Helvetica, sans-serif;
		text-shadow: 1px 1px 1px #333;
	}
}

#gcwu-title-in {
	display: table-cell;
	vertical-align: middle;
	margin: 0;
}

#gcwu-srchbx {
	@extend %text-decoration-underline-a-psuedos;
	position: absolute;
	background: #146094;
	border-top: 1px solid #87aec9;
	text-align: right;
	right: 0;
	bottom: -1px;
	width: auto;
	border: {
		right: 1px solid #15527D;
		left: 1px solid #15527D;
	}
	z-index: 100;
	padding: 11px 10px 6px 12px;
	input {
		margin: 0 0 1px;
		min-height: 0;
	}
	form {
		margin: 0;
	}
	label {
		position: absolute;
		@include clip-rect;
		height: 1px;
		width: 1px;
		overflow: hidden;
	}
	#gcwu-srch { //TODO: Does this need to be nested?
		color: #444;
		border: 1px solid #ccc;
		@include border-radius(2px);
		margin-left: 0;
		width: 218px;
		@include box-shadow(none);
		background: #fff;
		padding: 2px 0;
		@include pseudo-focus(false) {
			background: #f0fcff;
		}
	}
	a {
		&, &:visited {
			color: #fff;
			text-decoration: none;
			font-size: 80%;
			padding: 2px;
		}
	}
}

#gcwu-srch-submit {
	@include appearance(none);
	min-height: 24px;
	border: {
		bottom: 1px solid #999;
		right: 1px solid #999;
		top: 1px solid #fff;
		left: 1px solid #fff;
	}
	color: #333;
	@include border-radius(2px);
	text-shadow: 0 1px 0 #eee;
	font-weight: 400;
	@include box-shadow(none);
	padding: 2px 6px;
	display: inline;
	@include pseudo-focus {
		text-shadow: 0 1px 0 #ddd;
		@include box-shadow(none);
		border: {
			bottom: 1px solid #999;
			right: 1px solid #999;
			top: 1px solid #fff;
			left: 1px solid #fff;
		}
	}
	&:active {
		@include box-shadow(inset 0 0 5px 2px #999, 0 0 0 0 #eee);
		border: 1px solid #999;
	}
}

#gcwu-wmms {
	@extend %gcwu-default-desktop-screen-hidden-img;
	position: absolute;
	top: 38px;
	right: 4px;
}

#gcwu-wmms-in {
	@extend %gcwu-default-desktop-screen-float-right;
	height: 39px;
	width: 147px;
}

#gcwu-psnb {
	.wet-boew-menubar {
		margin-top: -1px;
		border-bottom: 4px solid #ccc;
	}
	.mb-menu {
		li {
			border: {
				left: 1px solid #124B79;
				right: 1px solid #15598f;
				bottom: none;
			}
			padding: 0;
			&:first-child {
				&.mb-active {
					border-left: 1px solid #CCC;
				}
			}
		}
		a {
			padding: 0.45em 1.17em 0.45em 0.79em;
			&.mb-has-sm {
				padding-right: 0.38em;
			}
		}
		.mb-sm-open {
			@include box-shadow(0 5px 5px -4px rgba(0, 0, 0, 0.5), 5px 5px 5px -4px rgba(0, 0, 0, 0.5), -5px 5px 5px -4px rgba(0, 0, 0, 0.5));
		}
		&, li {
			min-height: 2.15em;
		}
	}
}

%text-decoration-underline-a-psuedos {
	a {
		@include pseudo-focus {
			text-decoration: underline;
		}
	}
}

@if $experimental-support-for-mozilla {
	@-moz-document url-prefix() {
		#gcwu-srch-submit {
			min-height: 22px;
		}
	}
}

/* Right to left (RTL) CSS */
[dir="rtl"] {
	#wb-body, #wb-body-sec {
		#wb-main {
			@extend %gcwu-default-desktop-screen-float-left;
		}
	}

	#wb-sec-in {
		margin: 7px 10px 0 0;
	}

	#gcwu-date-mod {
		right: auto;
		left: 10px;
	}

	#wb-sec {
		@extend %gcwu-default-desktop-screen-float-right;
	}

	#wb-body-sec-sup {
		#wb-main {
			@extend %gcwu-default-desktop-screen-float-left;
		}
	}
	#wb-sup {
		@extend %gcwu-default-desktop-screen-float-left;
	}

	#gcwu-sig {
		@extend %gcwu-default-desktop-screen-float-right;
	}

	#gcwu-sig-in {
		margin-right: 10px;
		margin-left: 0;
	}

	#gcwu-gcnb {
		ul {
			@extend %gcwu-default-desktop-screen-float-left;
			li {
				@extend %gcwu-default-desktop-screen-float-right;
				&#gcwu-gcnb-lang {
					a {
						padding-right: 10px;
						padding-left: 0;
						margin-right: auto;
						margin-left: 1px;
					}
				}
			}
		}

		a {
			border-left: none;
			border-right: 1px solid #fff;
		}

		li {
			&:first-child {
				a {
					border-right: none;
				}
			}
		}
	}
	
	#gcwu-title {
		a {
			margin-left: auto;
			margin-right: 10px;
		}
	}

	#gcwu-srchbx {
		text-align: left;
		right: auto;
		left: 0;
		padding: 11px 12px 6px 10px;

		#gcwu-srch {
			margin-left: auto;
			margin-right: 0;
		}
	}

	#gcwu-srch-submit {
		border: {
			right: 1px solid #fff;
			left: 1px solid #999;
		}

		&:focus, &:hover {
			border: {
				right: 1px solid #fff;
				left: 1px solid #999;
			}
		}
	}

	#gcwu-wmms {
		left: 0;
		right: auto;
	}

	#gcwu-psnb {
		.mb-menu {
			a {
				padding: 0.45em 0.79em 0.45em 1.17em;
				&.mb-has-sm {
					padding-left: 0.38em;
					padding-right: 0.79em;
				}
			}
		}
	}

	#gcwu-gcft {
		@include scaleX(-1);
		#gcwu-gcft-fip {
			li {
				@include scaleX(-1);
			}
		}
	}

	#gcwu-gcft-ca {
		a {
			border-left: none;
			border-right: 1px solid #666;
			padding-left: 0;
			padding-right: 44px;
		}
	}
}

